--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #fff;
+		background: #000000;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -98,7 +98,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #888;
+		color: #f3f3f3;
 		font-family: "Lato", sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
@@ -110,14 +110,14 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		border-bottom: solid 1px #e4e4e4;
+		border-bottom: solid 1px #447dbe;
 		color: inherit;
 		text-decoration: none;
 	}
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
+			color: #7e7e7e !important;
 		}
 
 	strong, b {
@@ -1759,25 +1759,31 @@ input, select, textarea {
 	}
 
 	header p {
-		color: #aaa;
+		color: #ffffff;
 		position: relative;
 		margin: 0 0 1.6875em 0;
 	}
 
 	header h2 + p {
+		color: #ffffff;
 		font-size: 1.25em;
 		margin-top: -0.5em;
 		line-height: 1.5em;
 	}
 
 	header h3 + p {
+		color: #ffffff;
 		font-size: 1.1em;
 		margin-top: -0.35em;
 		line-height: 1.5em;
 	}
 
-	header h4 + p,
-	header h5 + p,
+	header h4 + p {
+		color: #ffffff;
+	}
+	header h5 + p {
+		color: #ffffff;
+	}
 	header h6 + p {
 		font-size: 0.9em;
 		margin-top: -0.25em;
@@ -1785,16 +1791,23 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #ffffff;
 		font-size: 3.5em;
 	}
 
 		header.major h2 + p {
-			color: #777;
+			color: #ffffff;
 			font-size: 1.75em;
 			font-weight: 700;
 			margin-top: -0.75em;
 		}
+
+			header.major h3 + p {
+				color: #ffffff;
+				font-size: 2.25em;
+				font-weight: 700;
+				margin-top: -0.75em;
+			}
 
 /* Form */
 
@@ -1803,7 +1816,7 @@ input, select, textarea {
 	}
 
 	label {
-		color: #777;
+		color: #f3f3f3;
 		display: block;
 		font-size: 0.9em;
 		font-weight: 700;
@@ -1848,7 +1861,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4acaa8;
+			border-color: #ffffff;
 		}
 
 	select {
@@ -2518,7 +2531,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: #989898;
+		background-color: #696969;
 		border-radius: 5px;
 		border: 0;
 		color: #ffffff !important;
@@ -2537,7 +2550,7 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		input[type="button"]:hover,
 		.button:hover {
-			background-color: #a5a5a5;
+			background-color: rgb(67, 123, 175);
 			color: #ffffff !important;
 		}
 
@@ -2545,7 +2558,7 @@ input, select, textarea {
 		input[type="reset"]:active,
 		input[type="button"]:active,
 		.button:active {
-			background-color: #8b8b8b;
+			background-color: #696969;
 		}
 
 		input[type="submit"].icon,
@@ -2604,7 +2617,7 @@ input, select, textarea {
 			input[type="reset"].alt:active,
 			input[type="button"].alt:active,
 			.button.alt:active {
-				background-color: #eaeaea;
+				background-color: #696969;
 			}
 
 			input[type="submit"].alt.icon:before,
@@ -2618,7 +2631,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #4acaa8;
+			background-color: #696969;
 			color: #ffffff !important;
 		}
 
@@ -2626,14 +2639,14 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #5ed0b1;
+				background-color: rgb(67, 123, 175);
 			}
 
 			input[type="submit"].primary:active,
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				background-color: #39c29d;
+				background-color: #696969;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2700,8 +2713,8 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
-		color: #d2f2e9;
+		background: #343435;
+		color: #ffffff;
 		height: 100%;
 		overflow-y: auto;
 		position: fixed;
@@ -2720,7 +2733,7 @@ input, select, textarea {
 			}
 
 		#header header p {
-			color: #b7eadc;
+			color: #ffffff;
 		}
 
 		#header a {
@@ -2728,7 +2741,7 @@ input, select, textarea {
 		}
 
 			#header a:hover {
-				color: #ffffff !important;
+				color: #6b6b6b !important;
 			}
 
 		#header > header {
@@ -2751,7 +2764,7 @@ input, select, textarea {
 			}
 
 			#header > header p {
-				color: #d2f2e9;
+				color: #e2e2e2;
 				font-style: italic;
 				margin: 1em 0 0 0;
 			}
@@ -2772,7 +2785,7 @@ input, select, textarea {
 			}
 
 				#header > footer .icons li a {
-					color: #b7eadc;
+					color: #d6d6d6;
 				}
 
 		#header > nav {
@@ -2789,7 +2802,7 @@ input, select, textarea {
 			}
 
 				#header > nav ul li {
-					border-top: solid 2px #5ccfb1;
+					border-top: solid 2px #343435;
 					display: block;
 					padding: 0;
 				}
@@ -2808,7 +2821,7 @@ input, select, textarea {
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #343435 !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -2818,14 +2831,14 @@ input, select, textarea {
 /* Wrapper */
 
 	#wrapper {
-		background: #fff;
+		background: #272727;
 		padding-right: 23em;
 	}
 
 /* Main */
 
 	#main > section {
-		border-top: solid 6px #f4f4f4;
+		border-top: solid 6px #686868;
 	}
 
 		#main > section > .container {
@@ -2839,7 +2852,7 @@ input, select, textarea {
 /* Footer */
 
 	#footer {
-		background: #fafafa;
+		background: #252525;
 		border-top: 0;
 		color: #c0c0c0;
 		overflow: hidden;
