--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2602,7 +2602,7 @@ input, select, textarea {
 		.button.alt {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #e4e4e4;
-			color: #777 !important;
+			color: #ffffff !important;
 		}
 
 			input[type="submit"].alt:hover,
@@ -2610,7 +2610,7 @@ input, select, textarea {
 			input[type="button"].alt:hover,
 			.button.alt:hover {
 				background-color: #f4f4f4;
-				color: #777 !important;
+				color: #ffffff !important;
 			}
 
 			input[type="submit"].alt:active,
@@ -2741,7 +2741,7 @@ input, select, textarea {
 		}
 
 			#header a:hover {
-				color: #6b6b6b !important;
+				color: #ffffff !important;
 			}
 
 		#header > header {
